revise results & discussion

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -391,7 +391,7 @@ For on data from experiments 4a and 4b, we further examined whether the self-ref
 \hypertarget{prioritization-of-good-character}{%
 \subsection{Prioritization of good character}\label{prioritization-of-good-character}}
 
-In this part, we report results from experiments 1a, 1b, 1c, 2, 5, and 6a. All these experiments shared similar design and can be used for testing the prioritization effect of moral character. The valid and unique sample size is 192. Note that for both experiment 1a and 1b, there were two datasets that were collected at different time points and location, thus we treated them as independent samples. Three-level Bayesian models revealed a robust prioritization effect of good character in perceptual matching task. The detailed results of each experiment can be found in supplementary materials.
+To test whether moral characters are prioritized, we modeled data from experiments 1a, 1b, 1c, 2, 5, and 6a with three-level Bayesian hierarchical models. All these experiments shared similar designs and can be used for testing the prioritization effect of moral character. The valid and unique sample size is 192. Note that for both experiments 1a and 1b, two datasets were collected at different time points and locations, thus we treated them as independent samples. Here we only reported the population-level results of three-level Bayesian models, the detailed results of each experiment can be found in supplementary materials.
 
 \begin{figure}
 \centering
@@ -399,18 +399,15 @@ In this part, we report results from experiments 1a, 1b, 1c, 2, 5, and 6a. All t
 \caption{\label{fig:plot-bayes-meta-1}Effect of moral character on RT and d'}
 \end{figure}
 
-For the \emph{d} prime, we found robust effect of moral character. Shapes associated with good character (``good person'', ``kind person'' or a name associated with morally good behavioral history) has higher sensitivity (median = 2.51, 95\% HDI = {[}2.23 2.78{]}) than shapes associated with neutral character (median = 2.19, 95\% HDI = {[}1.88 2.50{]}), \(median_{diff}\) = 0.31, 95\% HDI {[}0.00 0.64{]} , but we did not find differences between shapes associated with bad character (median = 2.25, 95\% HDI = {[}1.94 2.55{]}) and neutral character, \(median_{diff}\) = 0.05, 95\% HDI {[}-0.28 0.39{]}.
+For the \emph{d} prime, results from the Bayesian model revealed a robust effect of moral character. Shapes associated with good character (``good person'', ``kind person'' or a name associated with good behaviors) has higher sensitivity (median = 2.51, 95\% HDI = {[}2.23 2.78{]}) than shapes associated with neutral character (median = 2.19, 95\% HDI = {[}1.88 2.50{]}), \(median_{diff}\) = 0.31, 95\% HDI {[}0.00 0.64{]} , but we did not find differences between shapes associated with bad character (median = 2.25, 95\% HDI = {[}1.94 2.55{]}) and neutral character, \(median_{diff}\) = 0.05, 95\% HDI {[}-0.28 0.39{]}.
 
-For the reaction times, we also found robust effect of moral character for both match trials (see figure \ref{fig:plot-bayes-meta-1} C) and nonmatch trials (\textbf{see supplementary materials}). For match trials, shapes associated with good character has faster responses (median = 579.03 ms, 95\% HDI = {[}500.20 660.89{]}) than shapes associated with neutral character (median = 623.59 ms, 95\% HDI = {[}542.83 710.82{]}), \(median_{diff}\) = -44.19, 95\% HDI {[}-59.85 -30.36{]}. We also found that the responses to shapes associated with bad character (median = 640.86 ms, 95\% HDI = {[}561.22 729.99{]}) were slower as compared to the neutral character, \(median_{diff}\) = 16.85, 95\% HDI {[}2.82 30.10{]}. See Figure \ref{fig:plot-bayes-meta-1}.
-
+The results from reaction times data also found a robust effect of moral character for both match trials (see figure \ref{fig:plot-bayes-meta-1} C) and nonmatch trials (\textbf{see supplementary materials}). For match trials, shapes associated with good character has faster responses (median = 579.03 ms, 95\% HDI = {[}500.20 660.89{]}) than shapes associated with neutral character (median = 623.59 ms, 95\% HDI = {[}542.83 710.82{]}), \(median_{diff}\) = -44.19, 95\% HDI {[}-59.85 -30.36{]}. We also found that RTs to shapes associated with bad character (median = 640.86 ms, 95\% HDI = {[}561.22 729.99{]}) were slower as compared to the neutral character, \(median_{diff}\) = 16.85, 95\% HDI {[}2.82 30.10{]}. See Figure \ref{fig:plot-bayes-meta-1}.
 For the nonmatch trials, we found the advantage of good character: Shapes associated with good character (median = 654.16 ms, 95\% HDI = {[}573.12 742.91{]}) are faster than shapes associated with neutral (median = 671.81 ms, 95\% HDI = {[}588.33 762.65{]}), \(median_{diff}\) = -17.72 ms, 95\% HDI {[}-24.58 -11.19{]}. Similarly, the shapes associated with bad character (median = 676.93 ms, 95\% HDI = {[}590.23 765.67{]}) was responded slower than shapes associated with neutral character, \(median_{diff}\) = 16.85 ms, 95\% HDI {[}2.82 30.10{]}, but the effect size was smaller than the match trials (\textbf{see supplementary materials}).
 
-\hypertarget{self-referential-process-modulates-prioritization-of-good-character}{%
-\subsection{Self-referential process modulates prioritization of good character}\label{self-referential-process-modulates-prioritization-of-good-character}}
+\hypertarget{modulation-effect-self-referential-processing}{%
+\subsection{Modulation effect self-referential processing}\label{modulation-effect-self-referential-processing}}
 
-Here we report the results from three-level Bayesian models of three experiments (3a, 3b, and 6b) that aimed at testing whether the prioritization effect of good character is modulated by self-referential processing. These three experiments included data from 108 unique participants.
-
-To test the modulation effect, we focused on the differences between good/bad character with neutral character for self-referential and other-referential separately.Also, we compared the differences between the difference, i.e., how did the differences between good and bad characters under the self-referential conditions differ from that under other-referential conditions. The detailed results of each experiment can be found in supplementary materials.
+To test the modulation effect of self-referential processing, we also modeled data from three experiments (3a, 3b, and 6b) with three-level Bayesian models. These three experiments included 108 unique participants. We focused on the population-level effect of the interaction between self-referential processing and moral valence. Also, we examined the differences of differences, i.e., how the differences between good/bad characters and the neutral character under the self-referential conditions differ from that under other-referential conditions. The detailed results of each experiment can be found in supplementary materials.
 
 \begin{figure}
 \centering
@@ -418,22 +415,22 @@ To test the modulation effect, we focused on the differences between good/bad ch
 \caption{\label{fig:plot-bayes2}Interaction between moral character and self-referential}
 \end{figure}
 
-For the \emph{d} prime, we found that an interaction between moral character effect and self-referential processing: the good-neutral differences is larger for self-referential condition than for the other-referential condition (\(median_{diff}\) = 0.52; 95\% HDI = {[}-1.54 2.72{]}). However, this is not the case for the bad-neutral differences (\(median_{diff}\) = -0.01; 95\% HDI = {[}-1.55 2.37{]}). Further analyses revealed that prioritization effect of good character (as compared to neutral) only appeared for self-referential conditions but not other-referential conditions. The estimated \emph{d} prime for good-self was greater than neutral-self (\(median_{diff}\) = 0.57; 95\% HDI = {[}-0.93 2.88{]}), \emph{d} prime for good-self was also greater than good-other condition (\(median_{diff}\) = ; 95\% HDI = {[} {]}). The differences between bad-self and neutral-self, good-other and neutral-other, bad-other and neutral-other are all centered around zero (see Figure \ref{fig:plot-bayes2}, B, D).
+For the \emph{d} prime, we found an interaction between the moral valence and self-referential processing: the good-neutral differences are larger for the self-referential condition than for the other-referential condition (\(median_{diff}\) = 0.52; 95\% HDI = {[}-1.54 2.72{]}). However, this is not the case for the bad-neutral differences (\(median_{diff}\) = -0.01; 95\% HDI = {[}-1.55 2.37{]}). Further analyses revealed that the prioritization effect of good character (as compared to neutral) only appeared for self-referential conditions but not other-referential conditions. The estimated \emph{d} prime for good-self was greater than neutral-self (\(median_{diff}\) = 0.57; 95\% HDI = {[}-0.93 2.88{]}), \emph{d} prime for good-self was also greater than good-other condition (\(median_{diff}\) = ; 95\% HDI = {[} {]}). The differences between bad-self and neutral-self, good-other and neutral-other, and bad-other and neutral-other are all centered around zero (see Figure \ref{fig:plot-bayes2}, B, D).
 
-For the RTs of matched trials, we found an interaction between moral character and self-referential processing: the good-neutral differences were different for the self- and other-referential conditions (\(median_{diff}\) = -155.11; 95\% HDI = {[}-755.36 395.38{]}). However, this was not the case for bad-neutral differences (\(median_{diff}\) = -55.63; 95\% HDI = {[}-604.70 561.00{]}). Further analyses revealed a robust good-self prioritization effect as compared to neutral-self (\(median_{diff}\) = -57.91; 95\% HDI = {[}-224.43 41.14{]}) and good-other (\(median_{diff}\) = -107.21; 95\% HDI = {[}-369.05 92.95{]}) conditions. Similar to the results of \emph{d'}, we found that both good character and bad character were responded slower than neutral character for other-referential conditions. See Figure \ref{fig:plot-bayes2}.
+For the RTs of matched trials, we also found an interaction between moral valence and self-referential processing: the good-neutral differences were different for the self- and other-referential conditions (\(median_{diff}\) = -155.11; 95\% HDI = {[}-755.36 395.38{]}). However, this was not the case for bad-neutral differences (\(median_{diff}\) = -55.63; 95\% HDI = {[}-604.70 561.00{]}). Further analyses revealed a robust good-self prioritization effect as compared to neutral-self (\(median_{diff}\) = -57.91; 95\% HDI = {[}-224.43 41.14{]}) and good-other (\(median_{diff}\) = -107.21; 95\% HDI = {[}-369.05 92.95{]}) conditions. Similar to the results of \emph{d'}, we found that participants responded slower for both good character and bad character than for the neutral character when they referred to others. See Figure \ref{fig:plot-bayes2}.
 
-These results suggested that the prioritization of good character is not solely driven by valence of moral character. Instead, the self-referential processing modulated the prioritization of good character: the good character was prioritized only when it was self-referential. When the moral character was other-referential, good character has similar performance as bad character.
+These results suggested that the prioritization of good character is not solely driven by the valence of moral character. Instead, the self-referential processing modulated the prioritization of good character: good character was prioritized only when it was self-referential. When the moral character was other-referential, responses to both good and bad characters were slowed down.
 
 \hypertarget{spontaneous-binding-between-the-good-character-and-the-self}{%
 \subsection{Spontaneous binding between the good character and the self}\label{spontaneous-binding-between-the-good-character-and-the-self}}
 
-Here we reported the results from experiments 4a and 4b that aimed at testing whether the binding between self and good character happen even when these two piece of information are separated and only one of them is task-relevant. We are interested in testing whether the task-relevance modulated the effect observed in previous experiment.
+Experiments 4a and 4b were designed to test whether the good character and self-referential processing bind together spontaneously. Because these two experiments have different experimental designs, we model their data separately.
 
-In experiment 4a, where self- and other-referential were task-relevant and moral character are task-irrelevant, we found self-related conditions were performed better than other-related conditions, on both \emph{d} prime and reaction times. This pattern is consistent with previous studies (e.g., Sui et al. (2012)).
+In experiment 4a, where ``self'' vs.~``other'' were task-relevant and moral character were task-irrelevant, we found the ``self'' conditions performed better than the ``other'' conditions for both \emph{d} prime and reaction times. This pattern is consistent with previous studies (e.g., Sui et al. (2012)).
 
-More importantly, we found evidence, albeit weak, that task-irrelevant moral character also played an role. For shapes associated with self, \emph{d'} was greater when shapes had a good character inside the shape (median = 2.83, 95\% HDI {[}2.63 3.01{]}) than shapes that have neutral character (median = 2.74, 95\% HDI {[}2.58 2.95{]}, BF = 4.4) or bad character (median = 2.76, 95\% HDI {[}2.56 2.95{]}, BF = 3.1), but we did not found difference between shapes with bad character and neutral character inside for the self-referential shapes. For shapes associated with other, the results of \emph{d'} revealed a reversed pattern to the self-referential condition: \emph{d} prime was smaller when shapes had a good character inside (median = 1.87, 95\% HDI {[}1.71 2.04{]}) than had neutral (median = 1.96, 95\% HDI {[}1.80 2.14{]}) or bad character (median = 1.98, 95\% HDI {[}1.79 2.17{]}) inside. See Figure \ref{fig:plot-exp4-all}.
+More importantly, we found evidence, albeit weak, that task-irrelevant moral character also played a role. For shapes associated with ``self'', \emph{d'} was greater when shapes had a good character inside (median = 2.83, 95\% HDI {[}2.63 3.01{]}) than shapes that have neutral character (median = 2.74, 95\% HDI {[}2.58 2.95{]}, BF = 4.4) or bad character (median = 2.76, 95\% HDI {[}2.56 2.95{]}, BF = 3.1), but this is not the case for self-referential shapes with bad character and neutral character inside. For shapes associated with ``other'', the pattern reversed: \emph{d} prime was smaller when shapes had a good character inside (median = 1.87, 95\% HDI {[}1.71 2.04{]}) than had neutral (median = 1.96, 95\% HDI {[}1.80 2.14{]}) or bad character (median = 1.98, 95\% HDI {[}1.79 2.17{]}) inside. See Figure \ref{fig:plot-exp4-all}.
 
-A similar pattern was found for RTs in matched trials. For self-referential condition, when good character was presented as a task-irrelevant stimuli, the responds (median = 641, 95\% HDI {[}623 662{]}) were faster than when neutral character (median = 649, 95\% HDI {[}631 668{]}) or bad character (median = 648, 95\% HDI {[}628 667{]}) were inside. This effect was reversed for other-referential condition: shapes associated with other with good character inside (median = 733, 95\% HDI {[}711 754{]}) were slower than with neutral character (median = 721, 95\% HDI {[}702 741{]}) or bad character (median = 718, 95\% HDI {[}696 740{]}) inside.
+A similar pattern was found for RTs in matched trials. For the ``self'' condition, when a good character was presented inside the shapes, the RTs (median = 641, 95\% HDI {[}623 662{]}) were faster than when a neutral character (median = 649, 95\% HDI {[}631 668{]}) or bad character (median = 648, 95\% HDI {[}628 667{]}) were inside. This effect was reversed for the ``other'' condition: RTs for shapes associated with good character inside (median = 733, 95\% HDI {[}711 754{]}) were slower than those with neutral character (median = 721, 95\% HDI {[}702 741{]}) or bad character (median = 718, 95\% HDI {[}696 740{]}) inside.
 
 \begin{figure}
 \centering
@@ -441,24 +438,24 @@ A similar pattern was found for RTs in matched trials. For self-referential cond
 \caption{\label{fig:plot-exp4-all}Experiment 4: Implicit binding between good character and the self.}
 \end{figure}
 
-In experiment 4b, moral character was the task-relevant factor, and we found that there were main effect of moral character: shapes associated with good character were performed better than other-related conditions, on both \emph{d'} and reaction times. This pattern shows a robust prioritization effect of good character.
+In experiment 4b, where moral characters were task-relevant and ``self'' vs ``other'' were task-irrelevant, we found a main effect of moral character: performance for shapes associated with good characters was better than other-related conditions on both \emph{d'} and reaction times. This pattern, again, shows a robust prioritization effect of good character.
 
-Most importantly, we found evidence that task-irrelevant self-referential process also played an role. For shapes associated with good person, the \emph{d} prime was greater when shapes had an ``self'' inside than with ``other'' inside (\(mean_{diff}\) = 0.14, 95\% credible intervals {[}-0.02, 0.31{]}, BF = 12.07), but this effect did not happen when the target shape where associated with ``neutral'' (\(mean_{diff}\) = 0.04, 95\% HDI {[}-.11, .18{]}) or ``bad'' person (\(mean_{diff}\) = -.05, 95\% HDI{[}-.18, .09{]}).
+Most importantly, we found evidence that task-irrelevant labels, ``self'' or ``other'', also played a role. For shapes associated with good character, the \emph{d} prime was greater when shapes had a ``self'' inside than with ``other'' inside (\(mean_{diff}\) = 0.14, 95\% credible intervals {[}-0.02, 0.31{]}, BF = 12.07), but this effect did not occur when the target shape where associated with ``neutral'' (\(mean_{diff}\) = 0.04, 95\% HDI {[}-.11, .18{]}) or ``bad'' person (\(mean_{diff}\) = -.05, 95\% HDI{[}-.18, .09{]}).
 
-The same trend appeared for the RT data. For shapes associated with good person, with a ``self'' inside the shape reduced the reaction times as compared with when a ``other'' inside the shape (\(mean_{diff}\) = -55 ms, 95\% HDI {[}-75, -35{]}), but this effect did not occur when the shapes were associated neutral (\(mean_{diff}\) = 10, 95\% HDI {[}1, 20{]}) or bad (\(mean_{diff}\) = 5, 95\% HDI {[}-16, 27{]}) person. See Figure \ref{fig:plot-exp4-all}.
+The same trend appeared for the RT data. For shapes associated with good character, having a ``self'' inside shapes reduced the reaction times as compared to having an ``other'' inside the shapes (\(mean_{diff}\) = -55 ms, 95\% HDI {[}-75, -35{]}), but this effect did not occur when the shapes were associated neutral (\(mean_{diff}\) = 10, 95\% HDI {[}1, 20{]}) or bad (\(mean_{diff}\) = 5, 95\% HDI {[}-16, 27{]}) person. See Figure \ref{fig:plot-exp4-all}.
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
 
-Across nine experiments, we explored the prioritization effect of moral character and the underlying mechanism by a combination of social associative learning and perceptual matching task. First, we found robust effect that good character was prioritized in the shape-label matching task across five experiments. Second, across three experiments, we found that the prioritization of good character was not solely driven by moral valence itself, i.e., ``good'' vs ``bad''. Instead, this effect was modulated by a self-referential processing: prioritization only occurred when moral characters are self-referential. Finally, the prioritization of the combination of good character and self occured, albeit weak, even when either the self- or character- related information was irrelevant to experimental task (experiment 4a and 4b). In contrast, for other referential condition, explicitly or implicitly, the performance of good character was worse than neutral character. Together, these results highlighted the importance of the self in perceiving more character information, suggested a spontaneous self-referential process when moral character is involved in perceptual decision-making. These results contribute to a growing literature on the social and relational nature of perception {[}Xiao, Coppin, and Bavel (2016); Freeman, Stolier, and Brooks (2020); ＠hafri\_perception\_2021{]}.
+Across nine experiments, we explored the prioritization effect of moral character and the underlying mechanism by a combination of social associative learning and perceptual matching task. First, we found a robust effect that good character was prioritized in the shape-label matching task across five experiments. Second, across three experiments, we found that the prioritization of good character was not solely driven by moral valence itself, i.e., ``good'' vs ``bad''. Instead, this effect was modulated by self-referential processing: prioritization only occurred when moral characters are self-referential. Finally, the prioritization of the combination of good character and self occurred, albeit weak, even when either the self- or character-related information was irrelevant to the experimental task (experiment 4a and 4b). In contrast, performance to the combination of good character and ``other'', explicitly or implicitly, was worse than the combination of neutral character and ``other''. Together, these results highlighted the importance of the self in perceiving information related to moral characters, suggesting a spontaneous self-referential process when making perceptual decision-making for moral characters. These results are in line with a growing literature on the social and relational nature of perception {[}Xiao, Coppin, and Bavel (2016); Freeman, Stolier, and Brooks (2020); ＠hafri\_perception\_2021{]} and deepened our understanding of mechanisms of perceptual decision-making of moral information.
 
-The evidence for the effect of moral character on perceptual decision-making is robust in our study. Previous studies reported the effect of morality on perception but the results and the mechanisms were disputed. For example, (Anderson et al., 2011) reported that faces associated with bad social behavior capture attention more rapidly, however, an independent team failed to replicate the effect (Stein et al., 2017). Another studies by Gantman and Van Bavel (2014) found that moral words are more likely to be judged as words when it was presented subliminally, however, this effect may caused by semantic priming instead of morality (Firestone \& Scholl, 2015; Jussim et al., 2016). In the current study, the associative learning task allowed us to eliminate the semantic priming. First, only a few pairs of stimuli was used and different stimuli were different in many dimensions, makes it impossible for priming between them. Second, stimuli that used to represent moral character are neutral stimuli before the associative learning. Moreover, in experiment 1c where participants first associate moral behaviors with neutral names and then paired names with neutral shapes, we still found that effect of moral character, suggesting that it is the moral content instead of other features of labels/names that drives the prioritization effect. Finally, all eight different samples in the first set of experiments are consistent, this further confirmed that the prioritization effect of good character found in our paradigm is robust.
+The current study provided robust evidence for the prioritization of good character in perceptual decision-making. The existence of the effect of moral valence on perception has been disputed. (Anderson et al., 2011) reported that faces associated with bad social behavior capture attention more rapidly, however, an independent team failed to replicate the effect (Stein et al., 2017). Another study by Gantman and Van Bavel (2014) found that moral words are more likely to be judged as words when it was presented subliminally, however, this effect may be caused by semantic priming instead of morality (Firestone \& Scholl, 2015; Jussim et al., 2016). In the current study, we found the prioritization effect across five experiments, the sample size of individual experiments and combined provide strong evidence for the existence of the effect. Moreover, the associative learning task allowed us to eliminate the semantic priming effect for two reasons. First, associations between shapes and moral characters were acquired right before the perceptual matching task, semantic priming from pre-existed knowledge was impossible. Second, there were only a few pairs of stimuli were used and each stimulus represented different conditions, making it impossible for priming between trials. Importantly, a series of control experiments (1b, 1c, and 2) further excluded other confounding factors such as familiarity, presenting sequence, or words-based associations, suggesting that it was the moral content that drove the prioritization of good character.
 
-The prioritization of good character found in the current study was incongruent with previous moral perception studies, which usually reported a negativity effect, i.e., information related to bad moral character are processed better (Anderson et al., 2011; Eiserbeck \& Abdel Rahman, 2020). This discrepancy may resulted from differences in the experimental task: while in many previous moral perception studies, the participants were asked to detect the existence of a stimuli, the current task asked participants to recognize a pattern. In other words, previous studies targeted early stages of perception while the current task focus more on the decision-making at relative later stage of information processing. This discrepancy is consistent with the pattern found in studies with emotional stimuli (Pool, Brosch, Delplanque, \& Sander, 2016).
+The robust prioritization of good character found in the current study was incongruent with previous moral perception studies, which usually reported a negativity effect, i.e., information related to bad character is processed preferentially (Anderson et al., 2011; Eiserbeck \& Abdel Rahman, 2020). This discrepancy may be caused by the experimental task: while in many previous moral perception studies, the participants were asked to detect the existence of a stimulus, the current task asked participants to recognize a pattern. In other words, previous studies targeted early stages of perception while the current task focused more on decision-making at a relatively later stage of information processing. This discrepancy is consistent with the pattern found in studies with emotional stimuli (Pool, Brosch, Delplanque, \& Sander, 2016).
 
-We expanded previous moral perception studies by examining two possible explanations of the prioritization of good character: valence effect only or an interaction between valence and self-referential processing. Our results revealed that prioritization of good character is modulated by self-referential process: the good character was prioritized when it was related to self, even when the self-relatedness was task irrelevant. By contrast, good character information was no longer prioritized when it was associated with other. The modulation effect of self-referential processing was large when the relationship between moral character and the self was explicit. More importantly, the effect persisted when the relationship between moral character and the self information was implicit, suggesting a spontaneous self-referential processing when both information were presented. An possible explanation for this spontaneous self-referential of good character is that moral-self is central to our identity (Freitas, Cikara, Grossmann, \& Schlegel, 2017; Strohminger, Knobe, \& Newman, 2017) and the motivation to maintain a moral-self view also influenced the perceptual decision-making.
+We expanded previous moral perception studies by re-focusing on the agent who made the perceptual decision-making and examined the interaction between moral valence and self-referential processing. Our results revealed that prioritization of good character is modulated by self-referential processing: the good character was prioritized when it was related to the ``self'', even when the self-relatedness was task-irrelevant. By contrast, good character information was not prioritized when it was associated with ``other''. The modulation effect of self-referential processing was large when the relationship between moral character and the self was explicit, which is consistent with previous studies that only positive aspects of the self are prioritized (Hu et al., 2020). More importantly, the effect persisted when the relationship between moral character and self-information was implicit, suggesting spontaneous self-referential processing when both pieces of information were presented. A possible explanation for this spontaneous self-referential of good character is that the positive moral self-view is central to our identity (Freitas, Cikara, Grossmann, \& Schlegel, 2017; Strohminger, Knobe, \& Newman, 2017) and the motivation to maintain a moral self-view also influenced the perceptual decision-making.
 
-Although the results here revealed prioritization of good character in perceptual decision-making, we did not claim that the moral-self motivation \emph{penetrates} perception. Perceptual decision-making process include processes more than just encoding the sensory inputs but also other processes. To fully account the nuance of behavioral data and/or related data collected from other modules {[}{]}, we need computational models and integrative experimental approach (Almaatouq et al., 2022). For example, sequential sampling models suggest that, when making a perceptual decision, the agent is continuously accumulate evidence until the amount of evidence passed a threshold, then a decision is made (Chuan-Peng et al., 2022; Forstmann, Ratcliff, \& Wagenmakers, 2016; Ratcliff, Smith, Brown, \& McKoon, 2016). In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory (Shadlen \& Shohamy, 2016). Recently, applications of sequential sample model to perceptual matching tasks also suggest that different processes may contributed to the prioritization effect of self (Golubickis et al., 2017) or good self (Hu et al., 2020). Similarly, reinforcement learning models also revealed that the key difference between self- and other-referential learning lies in the learning rate (Lockwood et al., 2018). These studies suggest that computational models are need to disentangle the cognitive processes underlying the prioritization of good character.
+Although the results here revealed the prioritization of good character in perceptual decision-making, we did not claim that the motivation of a moral self-view \emph{penetrates} perception. The perceptual decision-making process involves processes more than just encoding the sensory inputs. To fully account for the nuance of behavioral data and/or related data collected from other modules {[}{]}, we need computational models and an integrative experimental approach (Almaatouq et al., 2022). For example, sequential sampling models suggest that, when making a perceptual decision, the agent continuously accumulates evidence until the amount of evidence passed a threshold, then a decision is made (Chuan-Peng et al., 2022; Forstmann, Ratcliff, \& Wagenmakers, 2016; Ratcliff, Smith, Brown, \& McKoon, 2016). In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory (Shadlen \& Shohamy, 2016). Recently, applications of sequential sample models to perceptual matching tasks also suggest that different processes may contribute to the prioritization effect of self (Golubickis et al., 2017) or good self (Hu et al., 2020). Similarly, reinforcement learning models also revealed that the key difference between self- and other-referential learning lies in the learning rate (Lockwood et al., 2018). These studies suggest that computational models are needed to disentangle the cognitive processes underlying the prioritization of good character.
 
 \hypertarget{references}{%
 \section{References}\label{references}}
